--- a/resources/assets/open-admin/scss/form.scss
+++ b/resources/assets/open-admin/scss/form.scss
@@ -468,3 +468,7 @@ body .choices {
         border-bottom-left-radius: 0.3rem;
         border-bottom-right-radius: 0.3rem;
     }
+
+    .card.custom-border-info{
+        border-top: 3px solid #00c0ef;
+    }
