--- a/resources/assets/open-admin/scss/grid.scss
+++ b/resources/assets/open-admin/scss/grid.scss
@@ -92,7 +92,7 @@
 
 .table tr th {
     vertical-align: top !important;
-    font-weight: normal;
+    font-weight: bolder;
     background: var(--bs-table-striped-bg);
     white-space: nowrap;
     border-top-width: 1px;
