--- a/resources/assets/open-admin/scss/styles.scss
+++ b/resources/assets/open-admin/scss/styles.scss
@@ -15,6 +15,7 @@
 @import "./toastr";
 @import "./grid";
 @import "./form";
+@import "./custom";
 
 @import "../../fields/icon-picker/icon-picker";
 
