--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -88,7 +88,7 @@ span.d-none d-sm-inline {
 }
 
 a {
-    text-decoration: none;
+    text-decoration: none !important;
 }
 
 .content>*:not(footer) {
@@ -190,6 +190,10 @@ main#main{
 }
 span.long.user-image img {
     width: unset;
+}
+button.close.fileinput-remove{
+    border: none;
+    background: none;
 }
 
 @media (min-width: 768px) {
