--- a/resources/assets/bootstrap5/scss/_variables.scss
+++ b/resources/assets/bootstrap5/scss/_variables.scss
@@ -46,6 +46,7 @@ $yellow:  #ffc107 !default;
 $green:   #198754 !default;
 $teal:    #20c997 !default;
 $cyan:    #0dcaf0 !default;
+$twitter: #55acee !default;
 // scss-docs-end color-variables
 
 // scss-docs-start colors-map
@@ -71,6 +72,7 @@ $primary:       $blue !default;
 $secondary:     $gray-600 !default;
 $success:       $green !default;
 $info:          $cyan !default;
+$twitter:       $twitter !default;
 $warning:       $yellow !default;
 $danger:        $red !default;
 $light:         $gray-100 !default;
@@ -83,6 +85,7 @@ $theme-colors: (
   "secondary":  $secondary,
   "success":    $success,
   "info":       $info,
+  "twitter":    $twitter,
   "warning":    $warning,
   "danger":     $danger,
   "light":      $light,
