--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -125,9 +125,13 @@ a#menu-toggle {
     clear: both;
     font-weight: 400;
     line-height: 1.42857143;
-    color: #333;
+    color: #777;
     white-space: nowrap;
     text-decoration: none;
+}
+.dropdown-menu>li>a:hover {
+    background-color: #e1e3e9;
+    color: #333;
 }
 
 .btn-outline-secondary.dropdown-toggle.show:focus {
@@ -156,7 +160,7 @@ a#menu-toggle {
 
 
 form.search-form {
-    margin: 0 !important;
+    margin: 0 0 0 20px!important;
 }
 
 .header-items.navbar {
@@ -185,16 +189,20 @@ html {
 .custom-menu li>ul>li.active a {
     color: #444;
 }
-main#main{
+
+main#main {
     height: 91vh;
 }
+
 span.long.user-image img {
     width: unset;
 }
-button.close.fileinput-remove{
+
+button.close.fileinput-remove {
     border: none;
     background: none;
 }
+
 #totop {
     display: none;
     position: fixed;
@@ -209,8 +217,32 @@ button.close.fileinput-remove{
     border-radius: 4px;
     opacity: 0.5;
 }
+
+.user-image {
+    width: 25px;
+    height: 25px;
+    line-height:unset;
+}
 .file-drop-zone{
-    min-height: 275px !important;
+    min-height: unset !important;
+}
+
+button.close {
+    padding: 0;
+    cursor: pointer;
+    background: 0 0;
+    border: 0;
+}
+
+.close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity = 20);
+    opacity: .2;
 }
 
 @media (min-width: 768px) {
