--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -23,10 +23,10 @@
     width: unset !important;
 }
 
-.page-link {
-    font-size: 1rem;
-    padding: unset;
-}
+// .page-link {
+//     font-size: 1rem;
+//     padding: unset;
+// }
 
 .btn-default:hover {
     background-color: #e7e7e7 !important;
