--- a/resources/assets/open-admin/css/custom.css
+++ b/resources/assets/open-admin/css/custom.css
@@ -239,6 +239,10 @@ button.close {
   opacity: 0.2;
 }
 
+.skin-blue-light .main-header .navbar, .skin-blue-light .main-header .logo {
+  background-color: #3A96FF !important;
+}
+
 @media (min-width: 768px) {
   .col-md-6 {
     padding: 12px;
