--- a/resources/assets/open-admin/css/custom.css
+++ b/resources/assets/open-admin/css/custom.css
@@ -169,12 +169,6 @@ html {
   font-size: 13px !important;
 }
 
-.btn-sm,
-.btn-group-sm > .btn {
-  padding: 0.375rem 0.75rem;
-  font-size: 1rem;
-}
-
 .custom-menu a:active,
 .custom-menu a:focus,
 .custom-menu li > ul > li.active a {
@@ -262,17 +256,17 @@ button.close {
   gap: 0.5rem;
 }
 
-.btn-group > .btn-group:not(:first-child), .btn-group > :not(.btn-check:first-child) + .btn {
-  border-left: 1px solid #000;
-}
-
-.btn:hover {
+.btn-flat:hover {
   background-color: #fff !important;
 }
 
 button#search-btn {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+}
+
+div#main {
+  min-height: unset !important;
 }
 
 @media (min-width: 768px) {
@@ -286,6 +280,9 @@ button#search-btn {
   }
   .fixed-bottom {
     margin-left: 0;
+  }
+  .nav {
+    margin-bottom: 10px;
   }
 }
 
