--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -179,11 +179,11 @@ html {
     font-size: 13px !important;
 }
 
-.btn-sm,
-.btn-group-sm>.btn {
-    padding: 0.375rem 0.75rem;
-    font-size: 1rem;
-}
+// .btn-sm,
+// .btn-group-sm>.btn {
+//     padding: 0.375rem 0.75rem;
+//     font-size: 1rem;
+// }
 
 .custom-menu a:active,
 .custom-menu a:focus,
@@ -268,15 +268,15 @@ button.close {
     justify-content: center;
     gap: 0.5rem;
 }
-.btn-group>.btn-group:not(:first-child), .btn-group>:not(.btn-check:first-child)+.btn{
-    border-left: 1px solid #000;
-}
-.btn:hover{
+.btn-flat:hover{
     background-color: #fff !important;
 }
 button#search-btn{
     border-top-left-radius: 0;
     border-bottom-left-radius: 0;
+}
+div#main {
+    min-height: unset !important;
 }
 
 @media (min-width: 768px) {
@@ -292,5 +292,9 @@ button#search-btn{
 
     .fixed-bottom {
         margin-left: 0;
+    }
+
+    .nav{
+        margin-bottom: 10px;
     }
 }
