--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -54,10 +54,9 @@
     border-color: #0d6aad;
 }
 
-ul.dropdown-menu.show {
+ul.fillter-btn {
     transform: translate(0, 29px) !important;
-}
-
+  }
 
 .show {
     box-shadow: none !important;
@@ -277,6 +276,9 @@ button#search-btn{
 }
 div#main {
     min-height: unset !important;
+}
+.custom-navbar ul.user-menu {
+    width: 20rem;
 }
 
 @media (min-width: 768px) {
