--- a/resources/assets/open-admin/scss/content.scss
+++ b/resources/assets/open-admin/scss/content.scss
@@ -136,7 +136,7 @@
 
 .user-menu .user-header {
     background: var(--menu-bg);
-    color: var(--menu-text);
+    color: #fff;
 }
 
 /*---------------------------------------------------------*/
