--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -344,6 +344,9 @@ div#main {
 .side-menu-closed .custom-menu > ul > li:hover > a > span{
     margin: 2px 0 0 3px;
 }
+.select2-container{
+    z-index: 99999;
+}
 
 @media (min-width: 768px) {
     .col-md-6 {
