--- a/resources/assets/open-admin/scss/custom.scss
+++ b/resources/assets/open-admin/scss/custom.scss
@@ -57,8 +57,19 @@
 .btn-outline-secondary:hover,
 .btn-outline-secondary.dropdown-toggle.show {
     color: #fff;
-    background-color: #0d6aad;
-    border-color: #0d6aad;
+    background-color: #fff;
+    border-color: #fff;
+}
+
+.btn-outline-secondary{
+    box-shadow: none !important;
+    background-color: #fff !important ;
+    border-color: #fff !important;
+}
+
+.btn-outline-secondary.active{
+    background-color: #fff !important ;
+    border-color: #fff !important;
 }
 
 ul.fillter-btn {
@@ -160,6 +171,10 @@ a#menu-toggle {
     color: #444 !important;
     border-color: #ddd !important;
 }
+.btn-outline-secondary i:hover {
+    color: #111010 !important; 
+}
+
 
 .hide {
     display: none !important;
@@ -314,9 +329,9 @@ div#main {
     justify-content: center;
 }
 
-.table tr td {
-    white-space: nowrap !important;
-}
+// .table tr td {
+//     white-space: nowrap !important;
+// }
 
 .skin-blue-light.sidebar-mini.side-menu-closed .sidebar .user-panel > .image > img {
     width: 30px;
@@ -365,9 +380,12 @@ div#main {
     }
 }
 
+
+
 @media(max-width:768px) {
     .box-footer {
         justify-content: end;
     }
+    
 
 }
