--- a/resources/assets/open-admin/scss/form.scss
+++ b/resources/assets/open-admin/scss/form.scss
@@ -472,3 +472,7 @@ body .choices {
     .card.custom-border-info{
         border-top: 3px solid #00c0ef;
     }
+
+    .card.custom-border-success{
+        border-top: 3px solid #00a65a;
+    }
